--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/styles.css">
-    <title>Document</title>
+    <title>Insigt Academy</title>
 </head>
 <body>
 
@@ -14,6 +14,10 @@
                 <a href="">Inicio</a>
                 <a href="">Acerca de</a>
                 <a href="">Contáctanos</a>
+            </ul>
+            <ul>
+                <a href="">Iniciar sesión</a>
+                <a href="">Regístrate</a>
             </ul>
         </nav>
     </header>
