--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/styles.css">
+    <link rel="stylesheet" href="/styles.css"> 
     <title>Insigt Academy</title>
 </head>
 <body>
@@ -11,13 +12,13 @@
     <header>
         <nav class="topnav">
             <ul>
-                <a href="">Inicio</a>
-                <a href="">Acerca de</a>
-                <a href="">Contáctanos</a>
+                <a href="/index.html">Inicio</a>
+                <a href="/pages/about.html">Acerca de</a>
+                <a href="/pages/contact.html">Contáctanos</a>
             </ul>
             <ul>
-                <a href="">Iniciar sesión</a>
-                <a href="">Regístrate</a>
+                <a href="/pages/login.html">Iniciar sesión</a>
+                <a href="/pages/register.html">Regístrate</a>
             </ul>
         </nav>
     </header>
