--- a/pages/medicina.html
+++ b/pages/medicina.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Medicina</title>
+    <link rel="stylesheet" href="/styles.css"> 
+
 </head>
 <body>
     <h1>BIENVENIDO A MEDICINA</h1>
