--- a/pages/informatica.html
+++ b/pages/informatica.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/pages/informatica/styles.css">
-    <link  rel="stylesheet" href="/styles.css">
+    <link  rel="stylesheet" href="./../styles.css">
 </head>
 <body>
    
@@ -37,6 +37,6 @@
 
     </div>
 
-    <script src="/pages/informatica/app.js"></script>
+    <script src="./../pages/informatica/app.js"></script>
 </body>
 </html>
