--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <header>
         <nav class="topnav">
             <ul>
-                <a href="/index.html">Inicio</a>
-                <a href="/pages/about.html">Acerca de</a>
-                <a href="/pages/contact.html">Contáctanos</a>
+                <a href="index.html">Inicio</a>
+                <a href="./pages/about.html">Acerca de</a>
+                <a href="./pages/contact.html">Contáctanos</a>
             </ul>
             <ul>
-                <a href="/pages/login.html">Iniciar sesión</a>
-                <a href="/pages/register.html">Regístrate</a>
+                <a href="./pages/login.html">Iniciar sesión</a>
+                <a href="./pages/register.html">Regístrate</a>
             </ul>
         </nav>
     </header>
