--- a/pages/medicina.html
+++ b/pages/medicina.html
@@ -8,7 +8,19 @@
 
 </head>
 <body>
-    <h1>BIENVENIDO A MEDICINA</h1>
+    <header>
+        <nav class="topnav">
+            <ul>
+                <a href="/index.html">Inicio</a>
+                <a href="/pages/about.html">Acerca de</a>
+                <a href="/pages/contact.html">Contáctanos</a>
+            </ul>
+            <ul>
+                <a href="/pages/login.html">Iniciar sesión</a>
+                <a href="/pages/register.html">Regístrate</a>
+            </ul>
+        </nav>
+    </header>
 
 </body>
 </html>
