--- a/pages/medicina.html
+++ b/pages/medicina.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medicina</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./medicina/styles.css">
     <link  rel="stylesheet" href="./../styles.css">
 
 </head>
