--- a/pages/medicina.html
+++ b/pages/medicina.html
@@ -23,5 +23,21 @@
         </nav>
     </header>
 
+    <div id="filtro">
+        <label for="todos">Todos</label>
+        <input type="radio" name="filtro" value="todos" id="todos" checked>
+        
+        <label for="programacion">Programación</label>
+        <input type="radio" name="filtro" value="programacion" id="programacion">
+        
+        <label for="sistemas_operativos">Sistemas Operativos</label>
+        <input type="radio" name="filtro" value="sistemas_operativos" id="sistemas_operativos">
+    </div>
+
+    <div id="articulos">
+
+    </div>
+
+    <script src="./../pages/medicina/app.js"></script>
 </body>
 </html>
