--- a/pages/medicina.html
+++ b/pages/medicina.html
@@ -27,11 +27,11 @@
         <label for="todos">Todos</label>
         <input type="radio" name="filtro" value="todos" id="todos" checked>
         
-        <label for="programacion">Programación</label>
-        <input type="radio" name="filtro" value="programacion" id="programacion">
+        <label for="Medicina">Medicina</label>
+        <input type="radio" name="filtro" value="Medicina" id="Medicina">
         
-        <label for="sistemas_operativos">Sistemas Operativos</label>
-        <input type="radio" name="filtro" value="sistemas_operativos" id="sistemas_operativos">
+        <label for="Farmacia">Farmacia</label>
+        <input type="radio" name="filtro" value="Farmacia" id="Farmacia">
     </div>
 
     <div id="articulos">
