--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="topnav">
             <ul>
-                <a href="index.html">Inicio</a>
+                <a href="/">Inicio</a>
                 <a href="./pages/about.html">Acerca de</a>
                 <a href="./pages/contact.html">Contáctanos</a>
             </ul>
