--- a/pages/informatica.html
+++ b/pages/informatica.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="topnav">
             <ul>
-                <a href="/">Inicio</a>
+                <a href="/insightacademy">Inicio</a>
                 <a href="/pages/about.html">Acerca de</a>
                 <a href="/pages/contact.html">Contáctanos</a>
             </ul>
