Updated all headers

--- a/pages/informatica.html
+++ b/pages/informatica.html
@@ -12,12 +12,12 @@
         <nav class="topnav">
             <ul>
                 <a href="/insightacademy">Inicio</a>
-                <a href="/pages/about.html">Acerca de</a>
-                <a href="/pages/contact.html">Contáctanos</a>
+                <a href="/insightacademy/pages/about.html">Acerca de</a>
+                <a href="/insightacademy/pages/contact.html">Contáctanos</a>
             </ul>
             <ul>
-                <a href="/pages/login.html">Iniciar sesión</a>
-                <a href="/pages/register.html">Regístrate</a>
+                <a href="/insightacademy/pages/login.html">Iniciar sesión</a>
+                <a href="/insightacademy/pages/register.html">Regístrate</a>
             </ul>
         </nav>
     </header>
