--- a/pages/about.html
+++ b/pages/about.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="/styles.css"> 
 </head>
 <body>
+    <header>
+        <nav class="topnav">
+            <ul>
+                <a href="/insightacademy">Inicio</a>
+                <a href="/insightacademy/pages/about.html">Acerca de</a>
+                <a href="/insightacademy/pages/contact.html">Contáctanos</a>
+            </ul>
+            <ul>
+                <a href="/insightacademy/pages/login.html">Iniciar sesión</a>
+                <a href="/insightacademy/pages/register.html">Regístrate</a>
+            </ul>
+        </nav>
+    </header>
+
     
 </body>
 </html>
