Updated contact sub-page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,5 +21,22 @@
             </ul>
         </nav>
     </header>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2980.920423969171!2d-0.9160627!3d41.6574613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd596b47f743e4cb%3A0x5d4030ae89990c12!2sIES%20Santiago%20Hern%C3%A1ndez!5e0!3m2!1ses!2ses!4v1707899130416!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="contact-container">
+        <div class="contact-info"></div>
+        <div class="contact-form">
+            <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+        
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                
+                <textarea required autocapitalize="sentences" placeholder="Por favor, envíanos un mensaje" ></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
