--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="/styles.css"> 
+    <link rel="stylesheet" href="/insightacademy/styles.css"> 
+    <link rel="stylesheet" href="/insightacademy/src/styles.css"> 
 
 </head>
 <body>
