Update registration form

--- a/pages/login.html
+++ b/pages/login.html
@@ -24,6 +24,7 @@
         </nav>
     </header>
 
+    <h1>Inicia Sesión</h1>
     <div class="center-container">
         <div class="center-div">
             <form>
